--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ font-size:4rem;
 #msg{
     background-color: #092a50;
     color:white;
-    font-size:3rem;
+    font-size:2rem;
     margin-top:30px;
+    margin-left:400px;
 }
